--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,11 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "hono": "^4.6.0",
-    "openai": "^6.8.1"
+    "openai": "^6.8.1",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
-    "tsx": "^4.19.2",
-    "typescript": "^5.9.3"
+    "tsx": "^4.19.2"
   }
 }
