--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:stop": "pm2 stop workreadines-backend",
+    "pm2:restart": "pm2 restart workreadines-backend",
+    "pm2:logs": "pm2 logs workreadines-backend",
+    "pm2:delete": "pm2 delete workreadines-backend",
+    "deploy": "./deploy.sh"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.937.0",
